Wire variant shredding write path through FormatModel API as per PR feedback